# TSA_Real_Estate_2025

./: README.md  pyproject.toml
data/: ACSST5Y2022.S1903-2025-03-16T195249.csv  ACSST5Y2023.S1903-Data.csv  ACSST5Y2023.S1903-Data.no_first_row.csv  raw_affordable_housing_data.txt  state_affordable_housing.csv
notebooks/: nj_affordable_housing.ipynb
